--- a/src/main/resources/static/styles/signon/signon-extra-container.scss
+++ b/src/main/resources/static/styles/signon/signon-extra-container.scss
@@ -10,6 +10,7 @@
   background: lighten($secondary, 10%);;
   border-radius: 1em;
   gap: 2vh;
+  z-index: 5;
   p {
     text-align: center;
     width: 60%;
