--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -36,6 +36,10 @@
 
 <script src="/js/animations.js"></script>
 
+<script type="text/javascript">
+    let account;
+</script>
+
 
 <div id="header-container">
     <div id="header-link-container">
@@ -43,7 +47,6 @@
         <a href="/menu" style="display: none;" class="link-hover">Menu</a>
         <a href="/cart" style="display: none;" class="link-hover">Order</a>
         <a href="/account" style="display: none;" class="link-hover">Account</a>
-        <a href="/#collaborate-container" style="display: none;" class="link-hover">Careers</a>
         <a href="/reference_page" style="display:none;" class="link-hover">Reference Page</a>
         <button id="header-show-button" data-headeropen="false" onclick="headerButtonClick()"><i class="fa-solid fa-bars"></i></button>
         <a id="header-cart-icon" class="header-no-remove" href="/cart" data-activetime="inactive" data-hover="false">
@@ -88,6 +91,15 @@
 
 
 <div class="barba-container" id="barba-container" data-barba="container" data-barba-namespace="page" data-page="menu">
+
+
+
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        account = /*[[${account}]]*/ 'noaccount';
+        /*]]>*/
+    </script>
+
 
 
     <div id="menu-item-overlay" onclick="hideOverlay(event, this);">
