--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -36,6 +36,10 @@
 
 <script src="/js/animations.js"></script>
 
+<script type="text/javascript">
+    let account;
+</script>
+
 
 
 <div id="header-container">
@@ -44,7 +48,6 @@
         <a href="/menu" style="display: none;" class="link-hover">Menu</a>
         <a href="/cart" style="display: none;" class="link-hover">Order</a>
         <a href="/account" style="display: none;" class="link-hover">Account</a>
-        <a href="/#collaborate-container" style="display: none;" class="link-hover">Careers</a>
         <a href="/reference_page" style="display:none;" class="link-hover">Reference Page</a>
         <button id="header-show-button" data-headeropen="false" onclick="headerButtonClick()"><i class="fa-solid fa-bars"></i></button>
         <a id="header-cart-icon" class="header-no-remove" href="/cart" data-activetime="inactive" data-hover="false">
@@ -89,6 +92,15 @@
 
 
 <div class="barba-container" id="barba-container" data-barba="container" data-barba-namespace="page" data-page="order">
+
+
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        account = /*[[${account}]]*/ 'noaccount';
+        /*]]>*/
+    </script>
+
+
     <div id="site-content-order" class="site-content" data-title="Order">
         <!--
         Start with the input of a location for the order, delivery or pick up or dine in.
@@ -133,7 +145,7 @@
 
 
         <div id="billing-info-container" style="display: none;">
-            <h2>Billing Info</h2>
+            <h2 id="order-billing-header">Billing Info</h2>
             <div id="billing-input">
                 <div id="billing-name-container" class="billing-data">
                     <label id="billing-name-label" class="label-billing">
@@ -208,9 +220,9 @@
 
         <div id="finalize-order-container" style="display: none;">
             <div id="final-order-info-display">
-                <h1>Thanks for shopping with us!</h1>
-                <h3>Your order is being prepared.</h3>
-                <div><h5>Estimated Time To Completion:</h5><h5 id="time-completion-estimate">10 Minutes</h5></div>
+                <h1 id="order-final-header-1">Thanks for shopping with us!</h1>
+                <h3 id="order-final-header-2">Your order is being prepared.</h3>
+                <div id="order-final-time"><h5>Estimated Time To Completion:</h5><h5 id="time-completion-estimate">10 Minutes</h5></div>
             </div>
             <div id="general-rating-panel">
                 <h4 id="rating-order-header">Rate Your Experience</h4>
