--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -45,7 +45,7 @@
         <a href="/menu" style="display: none;" class="link-hover">Menu</a>
         <a href="/cart" style="display: none;" class="link-hover">Order</a>
         <a href="/account" style="display: none;" class="link-hover">Account</a>
-        <a href="/reference_page" style="display:none;" class="link-hover">Reference Page</a>
+        <a href="/references" style="display:none;" class="link-hover">Reference Page</a>
         <button id="header-show-button" data-headeropen="false" onclick="headerButtonClick()"><i class="fa-solid fa-bars"></i></button>
         <a id="header-cart-icon" class="header-no-remove" href="/cart" data-activetime="inactive" data-hover="false">
             <i class="fa-solid fa-cart-shopping"></i>
@@ -82,7 +82,7 @@
     <a href="/cart"><h1>Order</h1></a>
     <a href="/account"><h1>Account</h1></a>
     <a href="/#collaborate-container"><h1>Careers</h1></a>
-    <a href="/reference_page"><h1>Reference Page</h1></a>
+    <a href="/references"><h1>Reference Page</h1></a>
 </div>
 
 
