--- a/src/main/resources/static/styles/core.css
+++ b/src/main/resources/static/styles/core.css
@@ -1580,7 +1580,7 @@ html *::-webkit-scrollbar-button {
   justify-content: space-evenly;
   gap: 4vw;
   flex-wrap: wrap;
-  height: 40vh;
+  min-height: 40vh;
 }
 #site-content-menu #menu-items-container .menu-items .menu-item-tag .tag-items .menu-item {
   aspect-ratio: 2/3;
@@ -1593,9 +1593,39 @@ html *::-webkit-scrollbar-button {
   padding-left: 1em;
   padding-right: 1em;
   gap: 0.5em;
-  flex: 1;
-  height: 100%;
+  max-height: 100%;
+  width: 15vw;
   will-change: transform, opacity;
+}
+@media (width <= 1075px) {
+  #site-content-menu #menu-items-container .menu-items .menu-item-tag .tag-items .menu-item {
+    width: 20vw;
+  }
+}
+@media (width <= 825px) {
+  #site-content-menu #menu-items-container .menu-items .menu-item-tag .tag-items .menu-item {
+    width: 25vw;
+  }
+}
+@media (width <= 675px) {
+  #site-content-menu #menu-items-container .menu-items .menu-item-tag .tag-items .menu-item {
+    width: 30vw;
+  }
+}
+@media (width <= 550px) {
+  #site-content-menu #menu-items-container .menu-items .menu-item-tag .tag-items .menu-item {
+    width: 35vw;
+  }
+}
+@media (width <= 475px) {
+  #site-content-menu #menu-items-container .menu-items .menu-item-tag .tag-items .menu-item {
+    width: 50vw;
+  }
+}
+@media (width <= 350px) {
+  #site-content-menu #menu-items-container .menu-items .menu-item-tag .tag-items .menu-item {
+    width: 75vw;
+  }
 }
 #site-content-menu #menu-items-container .menu-items .menu-item-tag .tag-items .menu-item .item-image-container {
   height: 50%;
@@ -2166,6 +2196,32 @@ html *::-webkit-scrollbar-button {
   outline: none !important;
   color: #EEEEEE;
   transition: color 1s ease-in-out;
+  text-align: center;
+}
+
+#site-content-references {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10vh;
+  padding-top: 15vh;
+}
+#site-content-references .references-flex {
+  display: flex;
+  flex-flow: column;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 5vh;
+}
+#site-content-references .reference-header {
+  padding-bottom: 5vh;
+  font-size: 3.25em;
+}
+#site-content-references .library {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
   text-align: center;
 }
 
