--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -60,7 +60,7 @@ Requisite content:
         <a href="/menu" style="display: none;" class="link-hover">Menu</a>
         <a href="/cart" style="display: none;" class="link-hover">Order</a>
         <a href="/account" style="display: none;" class="link-hover">Account</a>
-        <a href="/reference_page" style="display:none;" class="link-hover">Reference Page</a>
+        <a href="/references" style="display:none;" class="link-hover">Reference Page</a>
         <button id="header-show-button" data-headeropen="false" onclick="headerButtonClick()"><i class="fa-solid fa-bars"></i></button>
         <a id="header-cart-icon" class="header-no-remove" href="/cart" data-activetime="inactive" data-hover="false">
             <i class="fa-solid fa-cart-shopping"></i>
@@ -97,7 +97,7 @@ Requisite content:
     <a href="/cart" class="link-hover"><h1>Order</h1></a>
     <a href="/account" class="link-hover"><h1>Account</h1></a>
     <a href="/#collaborate-container" class="link-hover"><h1>Careers</h1></a>
-    <a href="/reference_page" class="link-hover"><h1>Reference Page</h1></a>
+    <a href="/references" class="link-hover"><h1>Reference Page</h1></a>
 </div>
 
 
