--- a/src/main/resources/static/styles/core.css
+++ b/src/main/resources/static/styles/core.css
@@ -1895,7 +1895,7 @@ html *::-webkit-scrollbar-button {
 }
 #site-content-order #billing-info-container {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-flow: column;
   justify-content: center;
