--- a/src/main/resources/static/styles/order/billing.scss
+++ b/src/main/resources/static/styles/order/billing.scss
@@ -1,6 +1,6 @@
 #billing-info-container {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-flow: column;
   justify-content: center;
