Added substantially more menu items (todo finish finding ones in Google Doc), debugged layouts on home page.

--- a/src/main/resources/static/styles/menu/menu_item_display.scss
+++ b/src/main/resources/static/styles/menu/menu_item_display.scss
@@ -43,6 +43,10 @@
           width: 15vw;
           will-change: transform, opacity;
 
+          .item-title {
+            text-align: center;
+          }
+
           @media (width <= 1075px) {
             width: 20vw;
           }
