--- a/src/main/resources/static/styles/home/current-featured.scss
+++ b/src/main/resources/static/styles/home/current-featured.scss
@@ -26,6 +26,10 @@
     gap: 1vh;
     text-align: center;
     will-change: transform, opacity;
+    h2 {
+      padding-left: 1em;
+      padding-right: 1em;
+    }
     div {
       flex-grow: 1;
       flex-shrink: 1;
@@ -44,17 +48,36 @@
       object-fit: cover;
       z-index: 1;
       border-radius: 2em;
+      max-width: 90%;
     }
   }
 
-  @media (width <= 950px) {
+  @media (width <= 1100px) {
+    height: 70vh;
     #featured-overlay {
       max-width: 80%;
+      h2 {
+        font-size: 2.25em;
+      }
     }
   }
-  @media (width <= 600px) {
+  @media (width <= 750px) {
+    height: 80vh;
+    max-width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
     #featured-overlay {
       max-width: 100%;
+      h2 {
+        font-size: 2em;
+      }
+    }
+  }
+  @media (width <= 425px) {
+    #featured-overlay {
+      h2 {
+        font-size: 1.75em;
+      }
     }
   }
 }
