--- a/src/main/resources/static/styles/home/item-promo.scss
+++ b/src/main/resources/static/styles/home/item-promo.scss
@@ -82,7 +82,7 @@
               justify-content: space-evenly;
               flex: 1;
             }
-            h5 {
+            h6 {
               width: 100%;
               flex-grow: 1;
               overflow-wrap: anywhere;
@@ -93,7 +93,7 @@
               flex-shrink: 1;
               aspect-ratio: 1/1;
               max-width: 100%;
-              padding-top: 1em;
+              padding-bottom: 1em;
               img {
                 width: 100%;
                 height: 100%;
@@ -122,7 +122,7 @@
     }
   }
 
-  @media (width <= 925px) {
+  @media (width <= 1050px) {
     .top-rated-item-tile {
       width: 27.5vw !important;
     }
