--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -111,7 +111,7 @@
                     <div id="menu-item-rating"><h5 id="menu-item-overlay-rating"></h5></div>
                 </div>
                 <div id="menu-item-image">
-                    <img id="menu-item-overlay-image" src="" alt="menu item overlay extra info image." style="width: 100%;height: 30vh;object-fit: contain;">
+                    <img id="menu-item-overlay-image" src="" alt="menu item overlay extra info image." style="width: 100%;height: 30vh;">
                 </div>
             </div>
             <div id="menu-item-desc-container">
