Improved image rendering, fixed critical mobile bug on cart, fixed rendering, changed home page hero image.

--- a/src/main/resources/static/styles/additemoverlay.scss
+++ b/src/main/resources/static/styles/additemoverlay.scss
@@ -89,7 +89,7 @@
       height: unset !important;
       gap: 3vh;
       #menu-item-image {
-        width: 100%;
+        width: 100% !important;
       }
     }
   }
