--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -150,7 +150,7 @@ Requisite content:
             </div>
             <div id="hero-bgimg">
                 <div id="hero-bgimg-overlay"></div>
-                <img id="hero-bgimg-image" src="/images/stockphotoforfood.jpg" alt="Image depicting an example of food.">
+                <img id="hero-bgimg-image" src="/images/bannerimage.jpg" alt="Image depicting an example of food.">
             </div>
         </div>
 
