--- a/src/main/resources/static/styles/account/ratingtiles.scss
+++ b/src/main/resources/static/styles/account/ratingtiles.scss
@@ -25,7 +25,7 @@
     .rating-message {
       flex: 1 1 0px;
       padding: 0.5em;
-      overflow-wrap: break-word;
+      overflow-wrap: anywhere;
       text-align: center;
     }
   }
